# Copyright 2025 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load(
    "@rules_fuchsia//fuchsia:assembly.bzl",
    "fuchsia_prebuilt_board_input_bundle_set",
)

package(default_visibility = ["//visibility:public"])

fuchsia_prebuilt_board_input_bundle_set(
    name = "x64_bibs",
    files = "@gn_targets//boards/x64:x64_bibs",
)
